PROJECT(Monsoon)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Lib)

ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(drivers)
ADD_SUBDIRECTORY(samples)
ADD_SUBDIRECTORY(projects/asteroids)