PROJECT(Monsoon)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Lib
	D:/ovr_sdk_win_0.2.3_public/LibOVR/Lib/x64
)

INCLUDE_DIRECTORIES(
	D:/ovr_sdk_win_0.2.3_public/LibOVR/Include
)

ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(drivers)
ADD_SUBDIRECTORY(samples)
ADD_SUBDIRECTORY(tests)
ADD_SUBDIRECTORY(projects)