PROJECT(Monsoon)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Lib)
SET(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)

SET(CMAKE_MODULE_PATH ${CMAKE_MODULE_PATH} "${CMAKE_SOURCE_DIR}/CMake/")

LINK_DIRECTORIES(${CMAKE_BINARY_DIR}/Lib
	D:/ovr_sdk_win_0.2.3_public/LibOVR/Lib/x64
)

INCLUDE_DIRECTORIES(
	D:/ovr_sdk_win_0.2.3_public/LibOVR/Include
)

OPTION(BUILD_SAMPLES "Builds the same projects for Monsoon." TRUE)
OPTION(BUILD_TESTS "Builds the test projects for Monsoon." TRUE)

ADD_SUBDIRECTORY(engine)
ADD_SUBDIRECTORY(drivers)

IF(${BUILD_SAMPLES})
ADD_SUBDIRECTORY(samples)
ENDIF(${BUILD_SAMPLES})

IF(${BUILD_TESTS})
ADD_SUBDIRECTORY(tests)
ENDIF(${BUILD_TESTS})

ADD_SUBDIRECTORY(projects)