PROJECT(Engine)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Boost REQUIRED)

INCLUDE_DIRECTORIES(
	${Boost_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
)

INCLUDE_DIRECTORIES(Include/)

INCLUDE(Sources.cmake)

ADD_DEFINITIONS(-DMONSOON_DYNLIB_EXPORT)
ADD_LIBRARY(Engine SHARED ${MODULE_SOURCES})
SET_TARGET_PROPERTIES(Engine PROPERTIES LINKER_LANGUAGE CXX)
