PROJECT(Tests C CXX)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

enable_testing()

FIND_PACKAGE(GTEST REQUIRED)
FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(DirectX REQUIRED)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/Engine/Include
	${Boost_INCLUDE_DIRS}
	${GTEST_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
)

INCLUDE(Sources.cmake)

ADD_EXECUTABLE(Tests ${MODULE_SOURCES})
TARGET_LINK_LIBRARIES(Tests Engine ${GTEST_LIBRARY})
