PROJECT(Asteroids)
CMAKE_MINIMUM_REQUIRED(VERSION 2.8)

FIND_PACKAGE(Boost REQUIRED)
FIND_PACKAGE(DirectX REQUIRED)

INCLUDE_DIRECTORIES(
	${CMAKE_SOURCE_DIR}/Engine/Include
	${CMAKE_SOURCE_DIR}/Drivers/D3D11Renderer/Include
	${DirectX_INCLUDE_DIR}
	${Boost_INCLUDE_DIRS}
)

LINK_DIRECTORIES(
	${DirectX_LIBRARY_DIR}
)

INCLUDE(Sources.cmake)

ADD_EXECUTABLE(Asteroids WIN32 ${MODULE_SOURCES})
TARGET_LINK_LIBRARIES(Asteroids Engine)
TARGET_LINK_LIBRARIES(Asteroids RendererD3D11)
TARGET_LINK_LIBRARIES(Asteroids ${DirectX_LIBRARY})
